--- a/features.html
+++ b/features.html
@@ -60,11 +60,29 @@
         "name": "OktoNote",
         "applicationCategory": "ProductivityApplication",
         "operatingSystem": ["iOS", "Android", "Web"],
-        "offers": {
-          "@type": "Offer",
-          "price": "0",
-          "priceCurrency": "USD"
-        },
+        "offers": [
+          {
+            "@type": "Offer",
+            "name": "Weekly Plan",
+            "price": "3.99",
+            "priceCurrency": "USD",
+            "billingDuration": "P1W"
+          },
+          {
+            "@type": "Offer",
+            "name": "Monthly Plan", 
+            "price": "4.99",
+            "priceCurrency": "USD",
+            "billingDuration": "P1M"
+          },
+          {
+            "@type": "Offer",
+            "name": "Annual Plan",
+            "price": "39.99", 
+            "priceCurrency": "USD",
+            "billingDuration": "P1Y"
+          }
+        ],
         "featureList": [
           "Multi-modal input (text, voice, photos, documents)",
           "AI-powered categorization into 10 card types",
