--- a/index.html
+++ b/index.html
@@ -56,11 +56,29 @@
       "url": "https://oktonote.app",
       "applicationCategory": "ProductivityApplication",
       "operatingSystem": ["iOS", "Android", "Web"],
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
-      },
+      "offers": [
+        {
+          "@type": "Offer",
+          "name": "Weekly Plan",
+          "price": "3.99",
+          "priceCurrency": "USD",
+          "billingDuration": "P1W"
+        },
+        {
+          "@type": "Offer",
+          "name": "Monthly Plan", 
+          "price": "4.99",
+          "priceCurrency": "USD",
+          "billingDuration": "P1M"
+        },
+        {
+          "@type": "Offer",
+          "name": "Annual Plan",
+          "price": "39.99", 
+          "priceCurrency": "USD",
+          "billingDuration": "P1Y"
+        }
+      ],
       "publisher": {
         "@type": "Organization",
         "name": "OktoNote",
