--- a/support.html
+++ b/support.html
@@ -79,7 +79,7 @@
             "name": "Does OktoNote work offline?",
             "acceptedAnswer": {
               "@type": "Answer",
-              "text": "Yes! OktoNote is designed with an offline-first approach. All your processed notes and files are stored locally on your device, so you can access, and search even without an internet connection. The app syncs when you're back online."
+              "text": "Yes! OktoNote is designed with an offline-first approach. Once your content is processed by our AI services, your organized notes and files are stored on your device, so you can access and search even without an internet connection. The app syncs when you're back online."
             }
           }
         ]
@@ -658,7 +658,7 @@
                         </div>
                         <div class="faq-item">
                             <div class="faq-question">Does OktoNote work offline?</div>
-                            <div class="faq-answer">Yes! OktoNote is designed with an offline-first approach. All your processed notes and files are stored locally on your device, so you can access, and search even without an internet connection. The app syncs when you're back online.</div>
+                            <div class="faq-answer">Yes! OktoNote is designed with an offline-first approach. Once your content is processed by our AI services, your organized notes and files are stored on your device, so you can access and search even without an internet connection. The app syncs when you're back online.</div>
                         </div>
                         <div class="faq-item">
                             <div class="faq-question">How intelligent is the search feature?</div>
@@ -712,7 +712,7 @@
                         </div>
                         <div class="faq-item">
                             <div class="faq-question">Do both views work offline?</div>
-                            <div class="faq-answer">Absolutely! Both Feed View and Timeline View work completely offline. All your processed cards and original source data are stored locally on your device, so you can browse, search, and access everything without an internet connection.</div>
+                            <div class="faq-answer">Absolutely! Both Feed View and Timeline View work completely offline. Once processed by our AI services, your organized cards and original source data are stored on your device, so you can browse, search, and access everything without an internet connection.</div>
                         </div>
                     </div>
                 </div>
